Fix scrambled chat bubbles truncated
Fix https://github.com/League-of-Foundry-Developers/fvtt-module-polyglot/issues/269

--- a/css/polyglot.css
+++ b/css/polyglot.css
@@ -6,7 +6,7 @@
 }
 
 .polyglot-chat-bubble {
-	font: var(--polyglot-chat-bubble-font);
+	font-family: var(--polyglot-chat-bubble-font);
 }
 
 .polyglot-lang-select {
